--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
 }
 
 body {
