--- a/src/components/todos/NewTodoForm.module.css
+++ b/src/components/todos/NewTodoForm.module.css
@@ -1,27 +1,43 @@
 .formSection {
-  display: flex;
-  width: 100%;
-  border: 2px solid;
-  justify-content: center;
+	display: flex;
+	width: 100%;
+	justify-content: center;
 }
 
 .formContent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 2px solid red;
-  padding: 50px;
-  margin: 50px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 50px;
+  border: 2px solid rgb( 0 0 0 / .4);
+  background-color: rgb( 0 0 0 / .1);
+  border-radius: 15px;
+	margin: 50px;
 }
 
 .formContent > * {
-  margin: 1rem;
+	font-family: "Montserrat", sans-serif;
+	margin: 1rem;
 }
 
 .formLabel {
-  font-size: 2rem;
+	font-size: 2rem;
+  font-weight: 500;
 }
 
-.formInput {}
+.formInput, .formSubmit {
+  padding: .5rem;
+  border-radius: 999px;
+  width: 15rem;
+}
 
-.formSubmit {}
+.formSubmit {
+  background-color: #800040;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.formSubmit:active {
+  box-shadow: 5px 5px 5px 0 rgb(10 10 10 / .8) inset;
+}
