--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab&display=swap');
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
+  font-family: "Zilla Slab", serif;
 }
 
 body {
-  font-family: sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #dfdfdf;
+  background-color: #eee;
 }
 
 h1, h2 {
-  color: #333333;
+  color: #222;
 }
 
 .btn {
-  font: inherit;
+  font-family: "Montserrat", sans-serif;
   padding: 0.5rem 1.5rem;
   cursor: pointer;
   border-radius: 4px;
@@ -66,7 +63,7 @@ h1, h2 {
   list-style: none;
   background-color: white;
   border-radius: 4px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   padding: 1rem;
   width: 20rem;
 }
