--- a/src/components/todos/NewTodoForm.module.css
+++ b/src/components/todos/NewTodoForm.module.css
@@ -9,9 +9,9 @@
 	flex-direction: column;
 	align-items: center;
 	padding: 50px;
-  border: 2px solid rgb( 0 0 0 / .4);
-  background-color: rgb( 0 0 0 / .1);
-  border-radius: 15px;
+	border: 2px solid rgb(0 0 0 / 0.4);
+	background-color: rgb(0 0 0 / 0.1);
+	border-radius: 15px;
 	margin: 50px;
 }
 
@@ -22,22 +22,30 @@
 
 .formLabel {
 	font-size: 2rem;
-  font-weight: 500;
+	font-weight: 500;
 }
 
-.formInput, .formSubmit {
-  padding: .5rem;
-  border-radius: 999px;
-  width: 15rem;
+.formInput,
+.formSubmit {
+	padding: 0.5rem;
+	border-radius: 999px;
+	width: 15rem;
 }
 
 .formSubmit {
-  background-color: #800040;
-  color: white;
-  border: none;
-  cursor: pointer;
+	background-color: #800040;
+	color: white;
+	border: none;
+	cursor: pointer;
+	box-shadow: 5px 5px 0 rgb(0 0 0 / 0.4);
+	transition: box-shadow 500ms ease;
 }
 
 .formSubmit:active {
-  box-shadow: 5px 5px 5px 0 rgb(10 10 10 / .8) inset;
+	background-color: #600040;
+}
+
+.formSubmit:hover {
+	box-shadow: 10px 10px 0 rgb(0 0 0 / 0.4);
+	transition: box-shadow 500ms ease;
 }
