--- a/src/index.css
+++ b/src/index.css
@@ -1,97 +1,91 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Zilla Slab", serif;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family: "Zilla Slab", serif;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #eee;
+	margin: 0;
+	padding: 0;
+	background-color: #ddd;
 }
 
-h1, h2 {
-  color: #222;
+h1,
+h2 {
+	color: #222;
 }
 
 .btn {
-  font-family: "Montserrat", sans-serif;
-  padding: 0.5rem 1.5rem;
-  cursor: pointer;
-  border-radius: 4px;
-  background-color: #800040;
-  color: white;
-  border: 1px solid #800040;
-  margin: 0 1rem;
+	font-family: "Montserrat", sans-serif;
+	height: 35px;
+	width: 150px;
+  margin: 1rem;
+  margin-bottom: .5rem;
+	border: none;
+	border-radius: 999px;
+	background-color: #800040;
+	color: white;
+	box-shadow: 5px 5px 0 rgb(0 0 0 / 0.4);
 }
 
 .btn:hover {
-  background-color: #9c1458;
-  border-color: #9c1458;
+	background-color: #9c1458;
+	border-color: #9c1458;
 }
 
 .btn--alt {
-  background-color: transparent;
-  color: #800040;
+	background-color: transparent;
+	color: #800040;
 }
 
 .btn--alt:hover {
-  background-color: #f8dae9;
+	background-color: #f8dae9;
 }
 
 .btn--add {
-  width: 50px;
-  height: 50px;
-  border: none;
-  border-radius: 50%;
-  font-size: 1.5rem;
-  background: #800040;
-  position: fixed;
-  bottom: 25px;
-  right: 25px;
-  text-align: center;
+	width: 50px;
+	height: 50px;
+	background-color: #800040;
+	color: white;
+	border: none;
+	cursor: pointer;
+	box-shadow: 5px 5px 0 rgb(0 0 0 / 0.4);
+	transition: box-shadow 500ms ease;
 }
 
 .btn--add::after {
-  content: '+';
-  color: white;
-  font-size: 3rem;
+	content: "+";
+	color: white;
+	font-size: 3rem;
 }
 
 .card {
-  list-style: none;
-  background-color: white;
-  border-radius: 4px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-  padding: 1rem;
-  width: 20rem;
+	list-style: none;
+	background-color: white;
+	border-radius: 4px;
+	/* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); */
+  box-shadow: 5px 5px 0 rgb(0 0 0 / 0.4);
+	transition: box-shadow 500ms ease;
+	padding: 1rem;
+	width: 20rem;
+}
+.card:hover {
+  box-shadow: 10px 10px 0 rgb(0 0 0 / 0.4);
+	transition: box-shadow 500ms ease;
 }
 
 .actions {
-  text-align: right;
-}
-
-.modal {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  border-radius: 6px;
-  background-color: white;
-  padding: 1rem;
-  text-align: center;
-  width: 30rem;
-  z-index: 10;
-  position: fixed;
-  top: 20vh;
-  left: calc(50% - 15rem);
+	text-align: right;
 }
 
 .backdrop {
-  position: fixed;
-  z-index: 1;
-  background-color: rgba(0, 0, 0, 0.75);
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  cursor: pointer;
+	position: fixed;
+	z-index: 1;
+	background-color: rgba(0, 0, 0, 0.75);
+	width: 100%;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	cursor: pointer;
 }
