--- a/src/components/ui/MainNavigation.module.css
+++ b/src/components/ui/MainNavigation.module.css
@@ -37,6 +37,10 @@
   background-color: #800040;
   box-shadow: 5px 5px 0 rgb(0 0 0 /.4);
   transition: all 500ms ease;
-  
+}
 
+@media screen and (max-width: 700px) {
+  .navLink {
+    font-size: .9rem;
+  }
 }
