--- a/src/components/ui/MainNavigation.module.css
+++ b/src/components/ui/MainNavigation.module.css
@@ -7,9 +7,18 @@
   align-items: center;
 }
 
+.header > * {
+  border: 1px solid;
+  height: 100%;
+  align-items: center;
+}
+
 .logo {
   margin-left: 2rem;
+  display: flex;
+  align-items: center;
 }
+
 
 .nav {
   display: flex;
@@ -39,8 +48,38 @@
   transition: all 500ms ease;
 }
 
-@media screen and (max-width: 700px) {
+.hamburgerMenu {
+  display: none;
+  margin-right: 1.5rem;
+}
+
+@media screen and (max-width: 600px) {
+  .header {
+    justify-content: space-between;
+  }
+  .logo {
+    margin-left: 1.5rem;
+  }
+  .navList {
+    display: none;
+    position: absolute;
+    top: 75px;
+    left: 0%;
+    flex-direction: column;
+    gap: 2rem;
+    width: 100%;
+    padding: 1.5rem 0;
+    background-color: rgb(0 0 0 / .4);
+  }
   .navLink {
-    font-size: .9rem;
+    background: none;
+    font-size: 1.4rem;
+  }
+  .navLink:hover {
+    box-shadow: none;
+  }
+  .hamburgerMenu {
+    display: flex;
+    align-items: center;
   }
 }
