--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,8 @@ h2 {
 	font-family: "Montserrat", sans-serif;
 	height: 35px;
 	width: 150px;
-  margin: 1rem;
-  margin-bottom: .5rem;
+	margin: 1rem;
+	margin-bottom: 0.5rem;
 	border: none;
 	border-radius: 999px;
 	background-color: #800040;
@@ -65,13 +65,16 @@ h2 {
 	background-color: white;
 	border-radius: 4px;
 	/* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4); */
-  box-shadow: 5px 5px 0 rgb(0 0 0 / 0.4);
+	box-shadow: 5px 5px 0 rgb(0 0 0 / 0.4);
 	transition: box-shadow 500ms ease;
 	padding: 1rem;
 	width: 20rem;
 }
+.card > h2 {
+	word-wrap: break-word;
+}
 .card:hover {
-  box-shadow: 10px 10px 0 rgb(0 0 0 / 0.4);
+	box-shadow: 10px 10px 0 rgb(0 0 0 / 0.4);
 	transition: box-shadow 500ms ease;
 }
 
