--- a/src/components/todos/NewTodoForm.module.css
+++ b/src/components/todos/NewTodoForm.module.css
@@ -8,7 +8,9 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 50px;
+	/* padding: 50px; */
+	width: min(300px,90%);
+	height: 450px;
 	border: 2px solid rgb(0 0 0 / 0.4);
 	background-color: rgb(0 0 0 / 0.1);
 	border-radius: 15px;
