--- a/src/components/ui/MainNavigation.module.css
+++ b/src/components/ui/MainNavigation.module.css
@@ -1,85 +1,90 @@
 .header {
-  width: 100%;
-  height: 75px;
-  box-shadow: 0 5px 5px rgb(0 0 0 / .5);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+	width: 100%;
+	height: 75px;
+	box-shadow: 0 5px 5px rgb(0 0 0 / 0.5);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .header > * {
-  height: 100%;
-  align-items: center;
+	height: 100%;
+	align-items: center;
 }
 
 .logo {
-  margin-left: 2rem;
-  display: flex;
-  align-items: center;
+	margin-left: 2rem;
+	display: flex;
+	align-items: center;
 }
-
 
 .nav {
-  display: flex;
-  flex-direction: row;
-  margin-right: 2rem;
+	display: flex;
+	flex-direction: row;
+	margin-right: 2rem;
 }
 
-.navList{
-  list-style: none;
-  display: flex;
+.navList {
+	list-style: none;
+	display: flex;
+  width: auto;
 }
 
 .navLink {
-  padding: .8rem 1rem;
-  border-radius: 999px;
-  margin: 1rem;
-  box-shadow: 0px 0px 0 rgb(0 0 0 / .4);
-  font-size: 1.1rem;
-  text-decoration: none;
-  font-weight: 500;
-  transition: all 500ms ease;
+	/* width: auto; */
+	padding: 0.8rem 1rem;
+	border-radius: 999px;
+	margin: 1rem;
+	box-shadow: 0px 0px 0 rgb(0 0 0 / 0.4);
+	font-size: 1.1rem;
+	text-decoration: none;
+	font-weight: 500;
+	transition: all 500ms ease;
 }
 
 .navLink:hover {
-  background-color: #800040;
-  box-shadow: 5px 5px 0 rgb(0 0 0 /.4);
-  transition: all 500ms ease;
+	background: #800040;
+	box-shadow: 5px 5px 0 rgb(0 0 0 /0.4);
+	transition: all 500ms ease;
 }
 
 .hamburgerMenu {
-  display: none;
-  margin-right: 1.5rem;
+	display: none;
+	margin-right: 1.5rem;
 }
 
 @media screen and (max-width: 600px) {
-  .header {
-    justify-content: space-between;
-  }
-  .logo {
-    margin-left: 1.5rem;
-  }
-  .navList {
-    display: none;
-    position: absolute;
-    top: 75px;
-    left: 0%;
-    flex-direction: column;
-    gap: 2rem;
+	.header {
+		justify-content: space-between;
+	}
+	.logo {
+		margin-left: 1.5rem;
+	}
+	.navList {
     width: 100%;
-    padding: 1.5rem 0;
-    background-color: rgb(0 0 0 / .4);
-  }
-  .navLink {
-    background: none;
-    font-size: 1.4rem;
-    width: 100%;
-  }
-  .navLink:hover {
-    box-shadow: none;
-  }
-  .hamburgerMenu {
-    display: flex;
+		display: none;
+		position: absolute;
+		top: 75px;
+		left: 0%;
+		flex-direction: column;
+		gap: 2rem;
+		width: 100%;
+		padding: 2.5rem 0;
+		background: rgb( 0 0 0 / 0.4 );
     align-items: center;
+	}
+	.navLink {
+    position: relative;
+    width: 100%;
+		font-size: 1.4rem;
+    background-color: rgb( 0 0 0 / .2);
+	}
+	.navLink:hover {
+		box-shadow: none;
+    background: rgb( 0 0 0 / .5);
   }
+	.hamburgerMenu {
+		display: flex;
+		align-items: center;
+	}
 }
